Got index and css loading

--- a/client/client.html
+++ b/client/client.html
@@ -6,6 +6,14 @@
   
   <script>
 
+    // Init function is called when window.onload runs (set below).
+    const init = () => {
+      
+    };
+
+    // When the window loads, run init.
+    window.onload = init;
+
   </script>
 </head>
 <body>
