Got get requests working

--- a/client/client.html
+++ b/client/client.html
@@ -6,9 +6,62 @@
   
   <script>
 
+    const handleResponse = async (response, parseResponse) => {
+      const content = document.querySelector('#content');
+
+      switch(response.status) {
+        case 200:
+          content.innerHTML = `<b>Success</b>`;
+          break;
+        case 201:
+          content.innerHTML = `<b>Created</b>`;
+          break;
+        case 400:
+          content.innerHTML = `<b>Bad Request</b>`;
+          break;
+        case 404:
+          content.innerHTML = `<b>Resource Not Found</b>`;
+          break;
+        default:
+          content.innerHTML = `Error code not implemented by client.`;
+          break;
+      }
+
+      if(parseResponse) {
+        let obj = await response.json();
+
+        let jsonString = JSON.stringify(obj.users);
+        content.innerHTML += `<p>${jsonString}</p>`;
+      } else {
+        content.innerHTML += `<p>Meta Data Received</p>`;
+      }
+    };
+
+    const requestUpdate = async (userForm) => {
+      const url = userForm.querySelector('#urlField').value;
+      const method = userForm.querySelector('#methodSelect').value;
+
+      let response = await fetch(url, {
+        method,
+        headers: {
+          'Accept': 'application/json'
+        },
+      });
+
+      handleResponse(response, method === 'get');
+    }
+
     // Init function is called when window.onload runs (set below).
     const init = () => {
-      
+      const userForm = document.querySelector('#userForm');
+
+      const getUsers = (e) => {
+        e.preventDefault();
+        requestUpdate(userForm);
+        return false;
+      }
+
+      userForm.addEventListener('submit', getUsers);
     };
 
     // When the window loads, run init.
