Added comments to code, also this will activate github actions

--- a/client/client.html
+++ b/client/client.html
@@ -5,7 +5,10 @@
   <link rel="stylesheet" type="text/css" href="/style.css">
   
   <script>
-
+    // handleResponse method - takes in a response object and a parseResponse bool
+    // switch statement to check the status of the respnose and print out a bold
+    // message accordingly to the content box. then, if parseResponse is true,
+    // parses the response's json to properly print out the message or the users
     const handleResponse = async (response, parseResponse) => {
       const content = document.querySelector('#content');
 
@@ -18,7 +21,6 @@
           break;
         case 204:
           content.innerHTML = `<b>Updated (No Content)</b>`;
-          parseResponse = false;
           break;
         case 400:
           content.innerHTML = `<b>Bad Request</b>`;
@@ -42,6 +44,10 @@
       }
     };
 
+    // requestUpdate function - takes in the user form and constructs a
+    // response using the url and method in the nameForm. passes the response
+    // into handleResponse with a boolean for whether or not the method is get
+    // as head requests aren't supposed to have messages
     const requestUpdate = async (userForm) => {
       const url = userForm.querySelector('#urlField').value;
       const method = userForm.querySelector('#methodSelect').value;
@@ -56,6 +62,11 @@
       handleResponse(response, method === 'get');
     };
 
+    // sendPost function - takes in name form and constructs a response using
+    // the values in the name form: the action, method, name, and age
+    // passes the response into handleResponse as well as a bool value that
+    // checks to make sure the status isn't 204, as an update to a user
+    // doesn't print a message aside from Updated
     const sendPost = async (nameForm) => {
       const nameAction = nameForm.getAttribute('action');
       const nameMethod = nameForm.getAttribute('method');
@@ -74,10 +85,13 @@
         body: formData,
       });
 
-      handleResponse(response, nameMethod === 'post');
+      handleResponse(response, response.status != 204);
     };
 
     // Init function is called when window.onload runs (set below).
+    // Sets up event listeners so that requestUpdate is eventually called
+    // whenever the userform is submitted and sendpost is eventually
+    // called when the nameform is submitted
     const init = () => {
       const userForm = document.querySelector('#userForm');
       const nameForm = document.querySelector('#nameForm');
